--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ vdr (1.7.38-1) unstable; urgency=low
     meant to be sortded by the upstream developer
   * Dropped fix-gcc-issue.patch - fixed upstream
   * Dropped fix-no-hddvbdevice-segfault.patch - fixed upstream
+  * Refreshed all patches
 
  -- Tobias Grimm <etobi@debian.org>  Wed, 23 Jan 2013 22:47:45 +0100
 
