--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,8 @@ vdr (1.7.38-1) unstable; urgency=low
   * Dropped fix-no-hddvbdevice-segfault.patch - fixed upstream
   * Refreshed all patches
   * Dropped Added 16_channels.conf.terr-fix.patch - fixed upstream
-  * Dropped vdr-dbg debug package
   * Switch to debhelper/compat 9
+  * Make use of dh and VDR's install target to simplify debian/rules
 
  -- Tobias Grimm <etobi@debian.org>  Wed, 23 Jan 2013 22:47:45 +0100
 
