--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (1.7.41-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Tobias Grimm <etobi@debian.org>  Sun, 17 Mar 2013 00:30:42 +0100
+
 vdr (1.7.40-1) unstable; urgency=low
 
   * New upstream release
