Fixed spelling error

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 vdr (1.7.41-1) unstable; urgency=low
 
   * New upstream release
-  * Improved plugin loading now allows to explicitly load specific plugins after
-    all other plugins (based on suggestions by Lars Hanisch from yaVDR)
+  * Improved plugin loading now allows one to explicitly load specific plugins
+    after all other plugins (based on suggestions by Lars Hanisch from yaVDR)
   * Use `svdrpsend updr` to update recordings from the OSD command menu in order
     to be independent of the video directory locaten (suggested by Frank Neumann
     from yaVDR)
