--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vdr (1.7.42-1) unstable; urgency=low
+
+  * New upstream release
+  * Standards-Version: 3.9.4
+  * Removed bugging message if shutdown is disabled (which is the default)
+
+ -- Tobias Grimm <etobi@debian.org>  Sat, 23 Mar 2013 21:17:06 +0100
+
 vdr (1.7.41-1) unstable; urgency=low
 
   * New upstream release
