--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (1.7.42-2) unstable; urgency=low
+
+  * Added vdr-1.7.42-fixpendingtimers.diff
+
+ -- Tobias Grimm <etobi@debian.org>  Tue, 26 Mar 2013 21:52:54 +0100
+
 vdr (1.7.42-1) unstable; urgency=low
 
   * New upstream release
