--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ vdr (2.0.0-1) UNRELEASED; urgency=low
 
   * New upstream release
   * Dropped vdr-1.7.42-fixpendingtimers.diff - fixed upstream
+  * Added new config option ENABLE_CORE_DUMPS in /etc/default/vdr
 
  -- Tobias Grimm <etobi@debian.org>  Sun, 31 Mar 2013 13:41:03 +0200
 
