--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ vdr (2.0.0-1) UNRELEASED; urgency=low
   * New upstream release
   * Dropped vdr-1.7.42-fixpendingtimers.diff - fixed upstream
   * Added new config option ENABLE_CORE_DUMPS in /etc/default/vdr
+  * Append CPPFLAGS to CFLAGS, so this gets stored in vdr.pc
+    and can be used by plugins
 
  -- Tobias Grimm <etobi@debian.org>  Sun, 31 Mar 2013 13:41:03 +0200
 
