Fixed collection of patch info to work with quilt patches

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ vdr (2.0.0-1) UNRELEASED; urgency=low
   * Added upstream fix vdr-2.0.0-fixkeeptracksinit.diff
   * Simplified the commands loader and dropped the ordering via
     order.reccmds.conf / order.commands.conf
+  * Fixed collection of patch info to work with quilt patches
 
  -- Tobias Grimm <etobi@debian.org>  Sun, 31 Mar 2013 13:41:03 +0200
 
