--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vdr (2.0.1-2) unstable; urgency=low
+
+  * Added new LIRC option to /etc/default/vdr to allow to change the lirc path
+    or to disable lirc by setting it to /dev/null (Closes: #708683)
+
+ -- Tobias Grimm <etobi@debian.org>  Sun, 19 May 2013 11:57:39 +0200
+
 vdr (2.0.1-1) unstable; urgency=low
 
   * New upstream release (Closes: #707413)
