--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vdr (2.0.1-3) UNRELEASED; urgency=low
+
+  * vdr-plugin-dvbhddevice and vdr-plugin-examples Replaces/Breaks
+    vdr << 2.0.1-1 - manpages have been moved from vdr into the plugin
+    packages  (Closes: #709152)
+
+ -- Tobias Grimm <etobi@debian.org>  Tue, 21 May 2013 23:26:18 +0200
+
 vdr (2.0.1-2) unstable; urgency=low
 
   * Added new LIRC option to /etc/default/vdr to allow to change the lirc path
