--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-vdr (2.0.1-3) UNRELEASED; urgency=low
+vdr (2.0.2-1) unstable; urgency=low
 
+  * New upstream release
   * vdr-plugin-dvbhddevice and vdr-plugin-examples Replaces/Breaks
     vdr << 2.0.1-1 - manpages have been moved from vdr into the plugin
     packages  (Closes: #709152)
 
- -- Tobias Grimm <etobi@debian.org>  Tue, 21 May 2013 23:26:18 +0200
+ -- Tobias Grimm <etobi@debian.org>  Sat, 25 May 2013 09:12:01 +0200
 
 vdr (2.0.1-2) unstable; urgency=low
 
