Fix "unhandled symlink to directory conversion of vdr-dbg (Closes: #736297)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (2.0.3-2) unstable; urgency=medium
+
+  * Fix "unhandled symlink to directory conversion of vdr-dbg (Closes: #736297)
+
+ -- Tobias Grimm <etobi@debian.org>  Mon, 31 Mar 2014 22:57:52 +0200
+
 vdr (2.0.3-1) unstable; urgency=low
 
   * New upstream release
