--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (2.1.8) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Tobias Grimm <etobi@debian.org>  Sat, 07 Feb 2015 11:12:43 +0100
+
 vdr (2.0.6-2) unstable; urgency=medium
 
   * Merged from Jessie-version 2.0.3-3: Fixed use of getent in postinst script
