--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-vdr (2.1.8) UNRELEASED; urgency=medium
+vdr (2.1.10-1) UNRELEASED; urgency=medium
 
   * New upstream release
 
- -- Tobias Grimm <etobi@debian.org>  Sat, 07 Feb 2015 11:12:43 +0100
+ -- Tobias Grimm <etobi@debian.org>  Thu, 12 Feb 2015 18:34:24 +0100
 
 vdr (2.0.6-2) unstable; urgency=medium
 
