Default video directory is now /var/lib/video because multiple video directories are not supported anymore

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ vdr (2.2.0-1) UNRELEASED; urgency=medium
 
   * New upstream release
   * Dropped upgrade code for pre-Squeeze releases
+  * Default video directory is now /var/lib/video because multiple video
+    directories are not supported anymore
 
  -- Tobias Grimm <etobi@debian.org>  Thu, 19 Feb 2015 12:18:30 +0100
 
