--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ vdr (2.2.0-1) UNRELEASED; urgency=medium
   * Dropped upgrade code for pre-Squeeze releases
   * Default video directory is now /var/lib/video because multiple video
     directories are not supported anymore
+  * When LIRC is set to an empty string, disable LIRC. By default use
+    /var/run/lirc/lircd
 
  -- Tobias Grimm <etobi@debian.org>  Thu, 19 Feb 2015 12:18:30 +0100
 
