--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-vdr (2.2.0-1) UNRELEASED; urgency=medium
+vdr (2.2.0-2) UNRELEASED; urgency=medium
 
   * New upstream release
   * Dropped upgrade code for pre-Squeeze releases
@@ -6,8 +6,9 @@ vdr (2.2.0-1) UNRELEASED; urgency=medium
     directories are not supported anymore
   * When LIRC is set to an empty string, disable LIRC. By default use
     /var/run/lirc/lircd
+  * Updated copyright
 
- -- Tobias Grimm <etobi@debian.org>  Thu, 19 Feb 2015 12:18:30 +0100
+ -- Tobias Grimm <etobi@debian.org>  Sat, 07 Mar 2015 13:02:02 +0100
 
 vdr (2.0.6-2) unstable; urgency=medium
 
