Install a debhelper addon in vdr-dev which supports the plugin packaging

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ vdr (2.2.0-1) UNRELEASED; urgency=medium
   * Arguments for vdr are now read from /etc/vdr/conf.d/
   * Plugins must provide a config, which may cointain plugin arguments, in
     /etc/vdr/conf.d/ in order to be loaded
+  * Install a debhelper addon in vdr-dev which supports the plugin packaging
 
  -- Tobias Grimm <etobi@debian.org>  Sat, 07 Mar 2015 13:02:02 +0100
 
