--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ vdr (2.2.0-1) UNRELEASED; urgency=medium
   * Delete /etc/vdr/conf.d on purge
   * Removed the VDR_CHARSET_OVERRIDE from /etc/default/vdr - replaced with the
    --chartab command line argument
+  * Removed dvb-modules reloading code (Closes: #512362)
 
  -- Tobias Grimm <etobi@debian.org>  Sat, 07 Mar 2015 13:02:02 +0100
 
