--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-vdr (2.2.0-1yavdr1~trusty) trusty; urgency=medium
+vdr (2.2.0-1yavdr2~trusty) trusty; urgency=medium
 
   * rebuild yavdr's package based on Debian's git
   * change videodir to /srv/vdr/video.00
   * add upstart job for vdr
   * add conf-file and upstart job for vdr-dbg
   * don't restart vdr on update
+  * don't use debconf
   * add a bunch of vdr patches
 
  -- Lars Hanisch <dvb@flensrocker.de>  Wed, 25 Mar 2015 20:45:45 +0100
