Change video directory to /srv/vdr/video on fresh installations
If /srv/vdr/video.00 exists, video will be a symlink to it.
For backward compatibility /srv/vdr/video will be symlinked to video.00.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 vdr (2.2.0-1yavdr2~trusty) trusty; urgency=medium
 
   * rebuild yavdr's package based on Debian's git
-  * change videodir to /srv/vdr/video.00
+  * change videodir to /srv/vdr/video
   * add upstart job for vdr
   * add conf-file and upstart job for vdr-dbg
   * don't restart vdr on update
