--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (2.2.0-2yavdr0~trusty) trusty; urgency=medium
+
+  * add patch for pin plugin
+
+ -- Lars Hanisch <dvb@flensrocker.de>  Thu, 23 Apr 2015 20:15:37 +0200
+
 vdr (2.2.0-1yavdr3~trusty) trusty; urgency=medium
 
   * rebuild yavdr's package based on Debian's git
