--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (2.2.0-3yavdr0~trusty) trusty; urgency=medium
+
+  * increase abi-version
+
+ -- Lars Hanisch <dvb@flensrocker.de>  Thu, 23 Apr 2015 22:03:28 +0200
+
 vdr (2.2.0-2yavdr0~trusty) trusty; urgency=medium
 
   * add patch for pin plugin
