--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (2.2.0-8yavdr0~trusty) trusty; urgency=medium
+
+  * add patch for dynamic caid-buffer-allocation
+
+ -- Lars Hanisch <dvb@flensrocker.de>  Sun, 13 Dec 2015 15:36:26 +0100
+
 vdr (2.2.0-7yavdr0~trusty) trusty; urgency=medium
 
   * add patch against too many pids
