--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (2.2.0-10yavdr0~trusty) trusty; urgency=medium
+
+  * ignore error on chown of video dir
+
+ -- Lars Hanisch <dvb@flensrocker.de>  Tue, 22 Dec 2015 17:38:22 +0100
+
 vdr (2.2.0-9yavdr0~trusty) trusty; urgency=medium
 
   * new patch for graphtftng (abi-break)
