--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (2.2.0-11yavdr0~trusty) trusty; urgency=medium
+
+  * new patch for dynamic caid-buffer-allocation
+
+ -- Lars Hanisch <dvb@flensrocker.de>  Wed, 06 Jan 2016 21:36:49 +0100
+
 vdr (2.2.0-10yavdr0~trusty) trusty; urgency=medium
 
   * ignore error on chown of video dir
