--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (2.2.0-13yavdr0~trusty) xenial; urgency=medium
+
+  * update package for xenial
+
+ -- Alexander Grothe <seahawk1986@gmx.de>  Sat, 06 Feb 2016 21:12:37 +0100
+
 vdr (2.2.0-12yavdr0~trusty) trusty; urgency=medium
 
   * new patch for graphtftng
