--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (2.2.0-17yavdr0~xenial) xenial; urgency=medium
+
+  * use libsystemd-dev instead of libsystemd-daemon-dev 
+
+ -- Alexander Grothe <seahawk1986@gmx.de>  Sat, 06 Feb 2016 22:22:48 +0100
+
 vdr (2.2.0-16yavdr0~xenial) xenial; urgency=medium
 
   * add some changes from debian package
